<resources>
    <string name="app_name">MapEleve</string>
    <string name="title_activity_maps">MapEleve</string>

    <string name="action_settings">Settings</string>

    <string name="drawerOpen">MapEleve</string>
    <string name="drawerClose">MapEleve</string>

    <string name="accounts">Compte</string>
    <string name="description_add">Ajout Calendrier</string>
    <string name="summary">Title</string>
    <string name="summary_hint">Enter the calendar title</string>
    <string name="cancel">Annuler</string>
    <string name="save">Sauvegarder</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Rafraichir</string>
    <string name="batchadd">Copy Calendar x3 (Batch)</string>
    <string name="edit">Edit Calendar</string>
    <string name="delete">Delete Calendar</string>
    <string name="delete_title">Delete Calendar?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="error">Erreur</string>
    <string name="error_format">Erreur : %s</string>
    <string name="planning">Planning</string>
    <string name="statut">Statut</string>

    <string-array name="drawerArray">
        <item>Liste des élèves</item>
        <item>Planning</item>
    </string-array>
    <string name="title_activity_navigation_drawer">MapEleve</string>

    <string-array name="listEleveArray">
        <item>Alice Liddell</item>
        <item>Anne Hathaway</item>
        <item>Barney Stinsons</item>
        <item>Bradley Cooper</item>
        <item>Kid Cudi</item>
        <item>Taylor Swift</item>
        <item>Snoop Dogg</item>
        <item>Kanye West</item>
        <item>Robbie Williams</item>
        <item>Dr Dre</item>
        <item>Bruno Mars</item>
        <item>50 Cent</item>
        <item>Kendrick Lamar</item>
    </string-array>

    <string name="title_section1">Accueil</string>
    <string name="title_section2">Liste des élèves</string>
    <string name="title_section3">Planning</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_ajouter">Ajouter</string>
    <string name="action_editer">Editer</string>
    <string name="action_synchro">Synchroniser</string>
    <string name="action_supprimer">Supprimer</string>

    <string name="title_activity_nd">NDActivity</string>

    <string name="textPrenomEleve">Prénom :</string>
    <string name="textNomEleve">Nom :</string>
    <string name="textAdresseEleve">Adresse :</string>
    <string name="textCpEleve">Code postal :</string>
    <string name="textVilleEleve">Ville :</string>
    <string name="textTelEleve">Téléphone :</string>

    <string name="action_nouvelle_lecon">Commencer une leçon</string>
    <string name="action_historique">Afficher l\'historique</string>
    <string name="action_annuler_modifier">Annuler</string>
    <string name="action_valider_modifier">Annuler</string>
    <string name="action_annuler_ajout">Annuler</string>
    <string name="action_valider_ajout">Annuler</string>
    <string name="load_gpx_data_button_label">Charger les données GPS</string>
    <string name="snap_to_roads_button_label">Coller à la route</string>

</resources>
