<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llFicheEleve"
    android:paddingBottom="8dp"
    android:paddingTop="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/tvTitrePrenomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textPrenomEleve"/>
    <TextView
        android:id="@+id/tvPrenomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textPrenomEleve"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvTitreNomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textNomEleve"
        android:layout_below="@+id/tvTitrePrenomEleve"/>
    <TextView
        android:id="@+id/tvNomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:layout_below="@+id/tvPrenomEleve"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textNomEleve"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvTitreAdresseEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textAdresseEleve"
        android:layout_below="@+id/tvTitreNomEleve"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:id="@+id/tvAdresseEleve"
        android:layout_below="@+id/tvNomEleve"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textTelEleve"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreCpEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textCpEleve"
        android:layout_below="@+id/tvTitreAdresseEleve"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:id="@+id/tvCpEleve"
        android:layout_below="@+id/tvAdresseEleve"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textTelEleve"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreVilleEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textVilleEleve"
        android:layout_below="@+id/tvTitreCpEleve"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvVilleEleve"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:layout_below="@+id/tvCpEleve"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textTelEleve"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreTelEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textTelEleve"
        android:layout_below="@+id/tvTitreVilleEleve"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTelEleve"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:layout_below="@+id/tvVilleEleve"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:text="@string/textTelEleve"
        android:singleLine="true" />

</RelativeLayout>