<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llFicheEleveModif"
    android:paddingBottom="8dp"
    android:paddingTop="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/tvTitrePrenomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textPrenomEleve"/>
    <EditText
        android:id="@+id/etPrenomEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvTitreNomEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textNomEleve"
        android:layout_below="@+id/tvTitrePrenomEleve"/>
    <EditText
        android:id="@+id/etNomEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/etPrenomEleveModif"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvTitreAdresseEleve"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textAdresseEleve"
        android:layout_below="@+id/tvTitreNomEleve"/>
    <EditText
        android:id="@+id/etAdresseEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/etNomEleveModif"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreCpEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textCpEleve"
        android:layout_below="@+id/tvTitreAdresseEleve"/>
    <EditText
        android:id="@+id/etCpEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/etAdresseEleveModif"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreVilleEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textVilleEleve"
        android:layout_below="@+id/tvTitreCpEleve"/>
    <EditText
        android:id="@+id/etVilleEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/etCpEleveModif"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_height"
        android:id="@+id/tvTitreTelEleve"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textStyle="bold"
        android:text="@string/textTelEleve"
        android:layout_below="@+id/tvTitreVilleEleve"/>
    <EditText
        android:id="@+id/etTelEleveModif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/et_margin_right_end"
        android:layout_marginRight="@dimen/et_margin_right_end"
        android:paddingTop="8dp"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/etVilleEleveModif"
        android:layout_toRightOf="@+id/tvTitreCpEleve"
        android:layout_toEndOf="@+id/tvTitreCpEleve"
        android:singleLine="true"
        android:textStyle="normal" />

</RelativeLayout>